[BA-11][feat] fix padding and button visibility

--- a/cfx-frontend/src/app/modules/shared/components/request-notification/request-stepper/request-stepper.component.scss
+++ b/cfx-frontend/src/app/modules/shared/components/request-notification/request-stepper/request-stepper.component.scss
@@ -18,7 +18,7 @@
     overflow-x: auto;
   }
   @media (max-height: 800px) {
-    height: 500px;
+    max-height: 500px;
     overflow-y: auto;
     padding-left: 5px;
     padding-right: 5px;
